sumo/tests/dfrouter/errors/no_detectors_output/Makefile.am
EXTRA_DIST =  errors.dfrouter.exe input_detectors.det.xml options.dfrouter \
output.dfrouter.exe

